# stm32_libraries

./: WORKSPACE
STM32Cube_FW_H7/: BUILD.bazel  Package_license.html  Package_license.md  Release_Notes.html  package.xml
STM32Cube_FW_H7/Drivers/CMSIS/: BUILD.bazel
STM32Cube_FW_H7/Drivers/CMSIS/DSP/: BUILD.bazel
STM32Cube_FW_H7/Drivers/STM32H7xx_HAL_Driver/: BUILD.bazel
STM32Cube_FW_H7/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h
STM32Cube_FW_H7/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
STM32Cube_FW_H7/Projects/: Release_Notes.html  STM32CubeProjectsList.html
STM32Cube_FW_H7/Projects/NUCLEO-H745ZI-Q/Demonstrations/: readme.txt
STM32Cube_FW_H7/Projects/NUCLEO-H753ZI/: readme.txt
STM32Cube_FW_H7/Projects/STM32H735G-DK/Demonstrations/: readme.txt
STM32Cube_FW_H7/Projects/STM32H747I-DISCO/Demonstrations/: readme.txt
STM32Cube_FW_H7/_htmresc/: ReleaseNotes.html  ReleaseNotes_Patch.html
STM32Cube_FW_L4/: BUILD.bazel  Package_license.html  Package_license.md
STM32Cube_FW_L4/Drivers/BSP/B-L475E-IOT01/: Release_Notes.html  stm32l475e_iot01_gyro.h  stm32l475e_iot01_hsensor.h  stm32l475e_iot01_magneto.h  stm32l475e_iot01_psensor.h  stm32l475e_iot01_tsensor.h
STM32Cube_FW_L4/Drivers/BSP/B-L4S5I-IOT01/: Release_Notes.html  stm32l4s5i_iot01_accelero.h  stm32l4s5i_iot01_gyro.h  stm32l4s5i_iot01_hsensor.c  stm32l4s5i_iot01_hsensor.h  stm32l4s5i_iot01_magneto.c  stm32l4s5i_iot01_magneto.h  stm32l4s5i_iot01_nfctag.c  stm32l4s5i_iot01_nfctag.h  stm32l4s5i_iot01_psensor.c  stm32l4s5i_iot01_psensor.h  stm32l4s5i_iot01_qspi.c  stm32l4s5i_iot01_qspi.h  stm32l4s5i_iot01_tsensor.c  stm32l4s5i_iot01_tsensor.h
STM32Cube_FW_L4/Drivers/BSP/STM32L476G-Discovery/: Release_Notes.html  stm32l476g_discovery.c  stm32l476g_discovery.h  stm32l476g_discovery_audio.c  stm32l476g_discovery_audio.h  stm32l476g_discovery_compass.c  stm32l476g_discovery_compass.h  stm32l476g_discovery_glass_lcd.c  stm32l476g_discovery_glass_lcd.h  stm32l476g_discovery_gyroscope.c  stm32l476g_discovery_gyroscope.h  stm32l476g_discovery_idd.c  stm32l476g_discovery_idd.h  stm32l476g_discovery_qspi.c  stm32l476g_discovery_qspi.h
STM32Cube_FW_L4/Drivers/BSP/STM32L496G-Discovery/: STM32L496G-Discovery_BSP_User_Manual.chm
STM32Cube_FW_L4/Drivers/BSP/STM32L4P5G-Discovery/: Release_Notes.html  stm32l4p5g_discovery.c  stm32l4p5g_discovery.h  stm32l4p5g_discovery_idd.c  stm32l4p5g_discovery_idd.h  stm32l4p5g_discovery_io.c  stm32l4p5g_discovery_io.h  stm32l4p5g_discovery_lcd.c  stm32l4p5g_discovery_lcd.h  stm32l4p5g_discovery_mmc.c  stm32l4p5g_discovery_mmc.h  stm32l4p5g_discovery_ospi_nor.c  stm32l4p5g_discovery_ospi_nor.h  stm32l4p5g_discovery_psram.c  stm32l4p5g_discovery_psram.h  stm32l4p5g_discovery_ts.c  stm32l4p5g_discovery_ts.h
STM32Cube_FW_L4/Drivers/BSP/STM32L4R9I-Discovery/: Release_Notes.html  md2html.sh  stm32l4r9i_discovery.c  stm32l4r9i_discovery.h  stm32l4r9i_discovery_audio.c  stm32l4r9i_discovery_audio.h  stm32l4r9i_discovery_camera.c  stm32l4r9i_discovery_camera.h  stm32l4r9i_discovery_gfxmmu_lut.h  stm32l4r9i_discovery_idd.c  stm32l4r9i_discovery_idd.h  stm32l4r9i_discovery_io.c  stm32l4r9i_discovery_io.h  stm32l4r9i_discovery_lcd.c  stm32l4r9i_discovery_lcd.h  stm32l4r9i_discovery_ospi_nor.c  stm32l4r9i_discovery_ospi_nor.h  stm32l4r9i_discovery_psram.c  stm32l4r9i_discovery_psram.h  stm32l4r9i_discovery_sd.c  stm32l4r9i_discovery_sd.h  stm32l4r9i_discovery_ts.c  stm32l4r9i_discovery_ts.h
STM32Cube_FW_L4/Drivers/BSP/STM32L4xx_Nucleo_32/: Release_Notes.html  stm32l4xx_nucleo_32.c  stm32l4xx_nucleo_32.h
STM32Cube_FW_L4/Drivers/CMSIS/: BUILD.bazel
STM32Cube_FW_L4/Drivers/STM32L4xx_HAL_Driver/: BUILD.bazel
STM32Cube_FW_L4/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal.h
STM32Cube_FW_L4/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.c
STM32Cube_FW_L4/Projects/32L476GDISCOVERY/Demonstrations/: readme.txt
STM32Cube_FW_L4/Projects/32L476GDISCOVERY/Templates/: readme.txt
STM32Cube_FW_L4/Projects/32L476GDISCOVERY/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/32L496GDISCOVERY/Demonstrations/: readme.txt
STM32Cube_FW_L4/Projects/32L496GDISCOVERY/Templates/: readme.txt
STM32Cube_FW_L4/Projects/32L496GDISCOVERY/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/32L4P5GDISCOVERY/Templates/: readme.txt
STM32Cube_FW_L4/Projects/32L4P5GDISCOVERY/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/32L4R9IDISCOVERY/Templates/: readme.txt
STM32Cube_FW_L4/Projects/32L4R9IDISCOVERY/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/B-L475E-IOT01A/Demonstrations/: readme.txt
STM32Cube_FW_L4/Projects/B-L475E-IOT01A/Templates/: readme.txt
STM32Cube_FW_L4/Projects/B-L475E-IOT01A/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/B-L4S5I-IOT01A/Templates/: readme.txt
STM32Cube_FW_L4/Projects/B-L4S5I-IOT01A/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L412KB/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L412KB/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L412RB-P/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L412RB-P/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L432KC/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L432KC/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L433RC-P/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L433RC-P/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L452RE-P/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L452RE-P/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L452RE/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L452RE/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L476RG/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L476RG/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L496ZG-P/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L496ZG-P/Templates_LL/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L496ZG/Templates/: readme.txt
STM32Cube_FW_L4/Projects/NUCLEO-L496ZG/Templates_LL/: readme.txt
(+10347 files in other folders)
