cc_library(
    name = "nucleo_h743xx",
    visibility = ["//visibility:public"],
    deps = [
        "//STM32Cube_FW_H7/Drivers/CMSIS:cortex_m7",
        "//STM32Cube_FW_H7/Drivers/CMSIS/Device/ST/STM32H7xx:stm32h743xx",
    ],
)

cc_library(
    name = "nucleo_h743xx_hal",
    visibility = ["//visibility:public"],
    deps = [
        ":nucleo_h743xx",
        "//STM32Cube_FW_H7/Drivers/STM32H7xx_HAL_Driver",
    ],
)
