cc_library(
    name = "headers",
    hdrs =
        glob(
            ["Inc/**/*.h"],
            exclude = ["Inc/**/*_template.h"],
        ),
    strip_include_prefix = "Inc",
    target_compatible_with = [
        "@platforms//os:none",
        "@platforms//cpu:armv7e-mf",
    ],
    deps = [
        "//STM32Cube_FW_L4/Drivers/CMSIS/Device/ST/STM32L4xx",
    ],
)

cc_library(
    name = "STM32L4xx_HAL_Driver",
    srcs =
        glob(
            ["Src/**/*.c"],
            exclude = ["Src/**/*_template.c"],
        ),
    target_compatible_with = [
        "@platforms//os:none",
        "@platforms//cpu:armv7e-mf",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":headers",
        "//STM32Cube_FW_L4/Drivers/CMSIS/Device/ST/STM32L4xx",
    ],
)
