cc_library(
    name = "stm32h743xx_headers",
    hdrs = [
        "Include/stm32h743xx.h",
        "Include/stm32h7xx.h",
        "Include/system_stm32h7xx.h",
    ],
    strip_include_prefix = "Include",
    target_compatible_with = [
        "@platforms//os:none",
        "@platforms//cpu:armv7e-mf",
    ],
)

cc_library(
    name = "stm32h743xx",
    target_compatible_with = [
        "@platforms//os:none",
        "@platforms//cpu:armv7e-mf",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":stm32h743xx_headers",
    ],
)
